# material-core

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: administration.md  authoring.md
docs/plans/: deployment-pipeline.md  req-001-repo-split.md  req-003-matrix-ci.md  req-004-course-lifecycle.md  req-005-doc-lifecycle.md  req-006-token-cli.md  req-007-group-scope.md  req-008-group-lifecycle.md  req-009-group-landing-page.md  req-013-orthogonal-creation.md  req-014-brand-registry.md  req-017-slides-brand-symlinks.md
docs/requirements/: REQ-001.md  REQ-002.md  REQ-003.md  REQ-004.md  REQ-005.md  REQ-006.md  REQ-007.md  REQ-008.md  REQ-009.md  REQ-010.md  REQ-012.md  REQ-013.md  REQ-014.md  REQ-015.md  REQ-016.md  REQ-017.md  REQ-018.md  REQ-020.md  REQ-021.md  REQ-xxx.md  REQUIREMENTS_INDEX.md  Requirements_Management.md
material_core/: _brand.yml  _brand_resolve.py  _cloudflare.py  _compose.py  _external.py  _fingerprint.py  _landing.py  _projects.py  _scaffold.py  cli.py
material_core/brands/generic/: _brand.yml  brand.scss
material_core/brands/pf/: _brand.yml  brand.scss
material_core/brands/thd/: _brand.yml  brand.scss  colors.tex
material_core/cloudflare/: worker.js
material_core/scripts/: manage-tokens.sh
material_core/shared/: base.scss  typst-show.typ
material_core/templates/: _quarto.common.fragment.yml
material_core/templates/_base/: .gitignore
material_core/templates/course/: _quarto.yml  index.qmd
material_core/templates/doc/: _quarto.yml  index.qmd
tools/: README.md  render_session.py
(+13 files in other folders)
