[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "material_core"
version = "0.7.2"
description = "Tooling for the material lecture/publication content repository"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Peter Fröhlich" }]
dependencies = [
    "click>=8.1",
    "httpx>=0.27,<0.29",
    "ruamel.yaml>=0.18,<0.19",
]

[project.scripts]
matctl = "material_core.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["material_core*"]

[tool.setuptools.package-data]
material_core = [
    "_brand.yml",
    "shared/**/*",
    "brands/**/*",
    "cloudflare/**/*",
    "templates/**/*",
    "scripts/**/*",
]
